[package]
authors = ["ustc_zzzz"]
build = "build.rs"
links = "CQP"
name = "table_tennis"
version = "0.1.0"

[dependencies]
encoding = "0.2"
lazy_static = "1.1"
regex = "1.0"
reqwest = "0.9"
serde_json = "1.0"
url = "1.7"

[dependencies.cqpsdk]
git = "https://github.com/evshiron/cqpsdk-rust"

[lib]
crate-type = ["dylib"]
name = "table_tennis"
